--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -40,6 +40,7 @@ thiserror = {version = "1", optional = true }
 uint = { version = "0.9.0", default-features = false }
 untrusted = { version = "0.7.1", optional = true }
 version-sync = { version = "0.9", optional = true }
+humantime = { version = "2", optional = true }
 
 [dev-dependencies]
 bincode = "1.3.1"
@@ -63,7 +64,7 @@ untrusted = "0.7.1"
 
 [features]
 json-schema = ["once_cell", "schemars"]
-std = ["derp", "getrandom", "once_cell", "pem", "thiserror", "untrusted"]
+std = ["derp", "getrandom", "once_cell", "pem", "thiserror", "untrusted", "dep:humantime"]
 testing = ["proptest", "rand_pcg"]
 # DEPRECATED - use "testing" instead of "gens".
 gens = ["testing"]
